cabal-version:      2.4
name:               parselet
version:            0.1.0.0
author:             dan pittman
maintainer:         dan@dpitt.me
extra-source-files:
    readme.md

library
    exposed-modules:
        Text.Parselet
    build-depends:
        base ^>=4.17.2.0,
        text
    hs-source-dirs:   src
    default-language: Haskell2010
